--- a/printer(2).cfg
+++ b/printer(2).cfg
@@ -275,9 +275,10 @@ pressure_advance: 0.028  #as tested by Harry 0.030 was good
 ##	In E0-MOT Position
 ##	Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 extruder]
-uart_pin: PD7
+## uart_pin: PD7
+uart_pin: can0: PA15
 interpolate: false
-run_current: 0.30
+run_current: 0.35
 hold_current: 0.25
 sense_resistor: 0.110
 stealthchop_threshold: 0
